feat: 클래스 페이징 조회 기능 구현 및 테스트