@@ -9,7 +9,6 @@ import com.tutorlink.teacher.dto.*;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TeacherService {
 
@@ -45,7 +44,7 @@ public class TeacherService {
         Teacher updatedTeacher = teacher.registerClass(teachingClass);
         Teacher savedTeacher = teacherRepository.save(updatedTeacher);
 
-        return savedTeacher.teachingClasses().get(savedTeacher.teachingClasses().size() - 1).id();
+        return savedTeacher.teachingClasses().getLast().id();
     }
 
     /**
@@ -57,44 +56,18 @@ public class TeacherService {
      * @throws IllegalArgumentException 선생님이 존재하지 않는 경우
      */
     public List<ClassMetadataDto> getClassesByTeacherId(Long teacherId, ClassSearchCondition condition) {
-        Teacher teacher = teacherRepository.findById(teacherId)
-                .orElseThrow(() -> new IllegalArgumentException("선생님이 존재하지 않습니다."));
-
         // 검색 조건이 null이면 빈 조건으로 초기화
         final ClassSearchCondition finalCondition = condition != null ? condition : ClassSearchCondition.empty();
 
-        // 필터링 및 정렬 적용
-        return teacher.teachingClasses().stream()
-                // 제목 키워드 필터링
-                .filter(teachingClass -> finalCondition.titleKeyword() == null || finalCondition.titleKeyword().isEmpty() || 
-                        teachingClass.title().contains(finalCondition.titleKeyword()))
-                // 정렬 적용
-                .sorted((c1, c2) -> {
-                    if (finalCondition.sortType() == null) {
-                        return 0; // 정렬 없음
-                    }
-
-                    return switch (finalCondition.sortType()) {
-                        case LATEST -> c2.registeredAt().compareTo(c1.registeredAt()); // 최신순 (내림차순)
-                        case PRICE -> Integer.compare(c1.price(), c2.price()); // 가격순 (오름차순)
-                    };
-                })
-                // DTO 변환
-                .map(teachingClass -> new ClassMetadataDto(
-                        teachingClass.id(),
-                        teachingClass.teacherId(),
-                        teachingClass.title(),
-                        teachingClass.description(),
-                        teachingClass.price(),
-                        teachingClass.registeredAt()
-                ))
-                .collect(Collectors.toList());
+        // 페이징된 결과를 가져와서 컨텐츠만 반환
+        PageResponse<ClassMetadataDto> pageResponse = getClassesByTeacherIdPaginated(teacherId, finalCondition);
+        return pageResponse.content();
     }
 
     /**
      * 선생님이 등록한 클래스 목록을 제목 키워드로 필터링하여 조회한다.
-     * 
-     * @param teacherId 선생님 ID
+     *
+     * @param teacherId    선생님 ID
      * @param titleKeyword 제목 키워드 (null이거나 빈 문자열이면 모든 클래스 반환)
      * @return 필터링된 클래스 메타데이터 DTO 목록
      * @throws IllegalArgumentException 선생님이 존재하지 않는 경우
@@ -103,5 +76,25 @@ public class TeacherService {
     @Deprecated
     public List<ClassMetadataDto> getClassesByTeacherIdWithTitleKeyword(Long teacherId, String titleKeyword) {
         return getClassesByTeacherId(teacherId, ClassSearchCondition.withTitleKeyword(titleKeyword));
+    }
+
+    /**
+     * 선생님이 등록한 클래스 목록을 페이징하여 조회한다.
+     *
+     * @param teacherId 선생님 ID
+     * @param condition 검색 조건 (페이징, 필터링, 정렬 포함)
+     * @return 페이징된 클래스 메타데이터 DTO 목록
+     * @throws IllegalArgumentException 선생님이 존재하지 않는 경우
+     */
+    public PageResponse<ClassMetadataDto> getClassesByTeacherIdPaginated(Long teacherId, ClassSearchCondition condition) {
+        // 선생님 존재 여부 확인 (존재하지 않으면 예외 발생)
+        teacherRepository.findById(teacherId)
+                .orElseThrow(() -> new IllegalArgumentException("선생님이 존재하지 않습니다."));
+
+        // 검색 조건이 null이면 빈 조건으로 초기화
+        final ClassSearchCondition finalCondition = condition != null ? condition : ClassSearchCondition.empty();
+
+        // 리포지토리에서 페이징된 결과 조회
+        return teacherRepository.findClassesByTeacherId(teacherId, finalCondition);
     }
 }
